# go-alias-rust

./: Cargo.toml  README.md  current_theme.json  hidden-shortcuts.json  run.sh  shortcuts.json  themes.json
src/: app_state.rs  base_page.rs  board.rs  calculator.rs  main.rs  not_found.rs  note.rs  paint.rs  request.rs
src/elements/: mod.rs  shortcut.rs  theme.rs
src/sql/: crypto.rs  helpers.rs  mod.rs  models.rs  routes.rs
static/: style.css
